# AdvancedBiomedicalAgent

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  langgraph.json  pyproject.toml  setup_and_ingest_everything.py  tool_test_cases.py
benchmark_viewer/: README.md  package.json
benchmark_viewer/app/: globals.css  layout.tsx  page.tsx
benchmark_viewer/src/components/: metrics-dashboard.tsx  question-compare-table.tsx  run-detail-inspector.tsx  run-selector.tsx  viewer-shell.tsx
benchmark_viewer/src/lib/: types.ts  (+1 more)
docs/: AEGRA_RAILWAY.md  CHAT_INTERFACE.md  CHEMBL_QUICKSTART.md  DATABASE_SCHEMA.md  ENHANCED_CLINICAL_TRIALS_UPDATE.md  INGESTION.md  MOLECULAR_MAPPING_GUIDE.md  README_POPULATE.md  REPO_SUMMARY.md  SETUP_GUIDE.md  tools.md
examples/: search_examples.py  sql_prototyping.py
scripts/: README_DM_TARGET.md  add_chat_model.py  backfill_mfp2_vec.py  chat_agent.py  create_chembl_mapping_tables.sql  create_enhanced_chembl_tables.sql  download_bindingdb.sh  download_chembl.sh  manage_users.py  migration.py  run_aegra.sh  run_aegra_up_and_web.sh  run_langgraph_and_chat.sh  run_langgraph_and_web.sh  start_chat_stack.sh  start_gui_stack.sh  start_gui_stack_up.sh  sync_tables_via_pgrestore.py
scripts/benchmarks/: README.md  plot_curebench_run_summary_barplot.py  prepare_curebench_dataset.py
sql/: create_users.sql
src/bioagent/: llm_judge.py
tests/: gui_api_smoke_test.py  llm_judge.py  run_llm_evaluation.py  test_benchmarking.py  test_search_tools_agent_mode.py  test_search_tools_direct.py  test_server_webapp_v1.py  test_structure_based_search.py
tests/benchmarks/: profiles.yaml
tests/ground_truth/: biotherapeutics.yaml  clinical_trial_details.yaml  clinical_trials.yaml  comparisons_selectivity.yaml  data_availability.yaml  drug_interactions.yaml  drug_labels.yaml  drug_profiles.yaml  drug_targets.yaml  identifiers.yaml  indications.yaml  molecule_trials.yaml  orange_book.yaml  safety_outcomes.yaml  structures.yaml  target_drugs.yaml
web/: Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  starter-prompts.yaml  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: user-menu.tsx
web/lib/: auth.ts  backend-client.ts  display-names.ts  model-catalog.ts  sse.ts  thread-session.ts  token-estimate.ts  types.ts  utils.ts
web/types/: next-auth.d.ts
(+94 files in other folders)
